# AdiosOS

./: CMakeLists.txt  LICENSE  README.md
1.1/: copy.c
1.2/: main.cpp
1.2/components/: counterWidget.cpp  counterWidget.h  sumWidget.cpp  sumWidget.h  timeWidget.cpp  timeWidget.h
2/: copy.c  test.c
3/: Makefile  lkm.c  test.c
4/: main.cpp
4/components/: aboutTab.cpp  aboutTab.h  mainWindow.cpp  mainWindow.h  moduleTab.cpp  moduleTab.h  performanceTab.cpp  performanceTab.h  processTab.cpp  processTab.h  systemTab.cpp  systemTab.h
4/core/: monitor.cpp  monitor.h
4/utils/: utils.cpp  utils.h
5/: main.cpp
5/core/: disk.cpp  disk.h  fs.cpp  fs.h
5/utils/: utils.cpp  utils.h
config/: linux.config
docker/: Dockerfile  buildroot.config  init
test/: Makefile  lkm_test.c
